--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
   --color-primary: #ffecd1;
   --color-secondary: #ff7d00;
   --color-tertiary: #78290f;
-  --color-dark: #15616d;
+  --color-dark: #009497;
   --color-darker: #001524;
 }
 
@@ -14,7 +14,6 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: "Quicksand", sans-serif;
-  font-weight: 500;
 }
 
 .app {
@@ -59,6 +58,32 @@ body {
   flex-direction: column;
   gap: 3.2rem;
   align-items: center;
+
+  ul {
+    list-style: none;
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.2rem;
+    justify-content: center;
+    align-content: start;
+
+    li {
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 1.2rem;
+
+      button {
+        cursor: pointer;
+        background: none;
+        border: none;
+        font-size: 1.8rem;
+        padding: 0.8rem;
+        transform: translateY(2px);
+      }
+    }
+  }
 }
 
 .stats {
