--- a/src/style.css
+++ b/src/style.css
@@ -24,16 +24,21 @@ body {
 }
 
 .logo {
-  font-family: "Righteous", sans-serif;
-  font-weight: 400;
-  text-transform: uppercase;
-  font-size: 2rem;
   display: flex;
   gap: 5rem;
   justify-content: center;
   align-items: center;
   background-color: var(--color-secondary);
-  color: var(--color-primary);
+  h1 {
+    color: var(--color-primary);
+    text-transform: uppercase;
+    text-align: center;
+    font-family: "Monoton";
+    font-size: 4rem;
+    text-transform: uppercase;
+    font-weight: 400;
+    word-spacing: 30px;
+  }
   img {
     width: 150px;
   }
