--- a/src/style.css
+++ b/src/style.css
@@ -122,7 +122,7 @@ body {
     li {
       font-weight: 600;
       display: flex;
-      align-items: center;
+      align-items: baseline;
       color: var(--color-darker);
       padding: 0.5rem 1rem;
       border-radius: 5px;
@@ -132,7 +132,7 @@ body {
         background: none;
         border: none;
         font-size: 1.5rem;
-        padding: 0.5rem;
+        padding: 0 0.5rem;
         transform: translateY(2px);
       }
     }
