--- a/src/style.css
+++ b/src/style.css
@@ -117,15 +117,84 @@ body {
     gap: 1rem;
     justify-content: center;
     align-content: start;
-    padding: 0;
 
     li {
       font-weight: 600;
       display: flex;
-      align-items: baseline;
+      align-items: center;
       color: var(--color-darker);
       padding: 0.5rem 1rem;
       border-radius: 5px;
+
+      /* #region Checkbox style */
+      .checkbox_container {
+        display: block;
+        position: relative;
+        cursor: pointer;
+        font-size: 22px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      /* Hide the browser's default checkbox */
+      .checkbox_container input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
+      }
+
+      /* Create a custom checkbox */
+      .checkmark {
+        position: absolute;
+        top: -6px;
+        left: -22px;
+        height: 12px;
+        width: 12px;
+        background-color: var(--color-primary);
+        border: 1px solid var(--color-tertiary);
+        border-radius: 3px;
+      }
+
+      /* On mouse-over, add a grey background color */
+      .checkbox_container:hover input ~ .checkmark {
+        background-color: lightgrey;
+      }
+
+      /* Add a background color when checked */
+      .checkbox_container input:checked ~ .checkmark {
+        background-color: var(--color-primary);
+      }
+
+      /* Create the checkmark (hidden when not checked) */
+      .checkmark:after {
+        content: "";
+        position: absolute;
+        display: none;
+      }
+
+      /* Show the checkmark when checked */
+      .checkbox_container input:checked ~ .checkmark:after {
+        display: block;
+      }
+
+      /* Style the checkmark */
+      .checkbox_container .checkmark:after {
+        left: 4px;
+        top: -6px;
+        width: 6px;
+        height: 13px;
+        border: solid var(--color-dark);
+        border-width: 0 2.5px 2.5px 0;
+        border-radius: 0px;
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+      }
+      /* #endregion Checkbox style */
 
       button {
         cursor: pointer;
