--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
   --color-primary: #ffecd1;
   --color-secondary: #ff7d00;
   --color-tertiary: #78290f;
-  --color-dark: #009497;
+  --color-dark: #76c7ad;
   --color-darker: #001524;
 }
 
@@ -62,6 +62,11 @@ body {
     width: 100%;
     text-align: center;
     margin-bottom: 1rem;
+  }
+
+  .input_container {
+    display: flex;
+    gap: 1rem;
   }
 
   button,
@@ -210,14 +215,14 @@ body {
 
 .stats {
   background-color: var(--color-dark);
-  color: var(--color-primary);
+  color: var(--color-tertiary);
   text-align: center;
   font-weight: 700;
   padding: 2rem 1rem;
   font-size: clamp(0.8rem, 2vw, 1rem);
 }
 
-@media (max-width: 428px) {
+@media (375px < width <= 428px) {
   .app {
     justify-content: center;
   }
@@ -238,13 +243,37 @@ body {
     flex-direction: column;
     gap: 1rem;
 
-    input[type="text"] {
-      width: 20em;
-      padding: 0.5rem 1.2rem;
+    .input_container {
+      width: 95%;
+      justify-content: center;
+      padding: 0 0.5rem;
+
+      input[type="text"] {
+        flex-grow: 1;
+      }
     }
 
-    button {
+    button,
+    select {
       padding: 0.7rem 1.8rem;
+    }
+  }
+}
+
+@media (width <= 375px) {
+  .logo {
+    flex-wrap: nowrap;
+    gap: 0.5rem;
+  }
+
+  .add-form {
+    input[type="text"] {
+      width: 9em;
+    }
+
+    button,
+    select {
+      padding: 0.6rem 1.6rem;
     }
   }
 }
