--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,6 @@ body {
   }
 
   button,
-  select,
   input {
     background-color: var(--color-primary);
     color: var(--color-tertiary);
@@ -79,19 +78,8 @@ body {
     border-radius: 10rem;
     padding: 0.25rem 1.2rem;
     font-weight: 700;
-    font-size: clamp(1rem, 2vw, 1.8rem);
+    font-size: clamp(1rem, 2vw, 1.2rem);
     cursor: pointer;
-  }
-
-  select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-image: url("data:image/svg+xml;utf8,<svg fill='%2378290f' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
-    background-repeat: no-repeat;
-    background-position-x: calc(100% - 10px);
-    background-position-y: 50%;
-    padding-right: 2.5rem;
   }
 
   button {
@@ -102,6 +90,26 @@ body {
   }
 }
 
+select {
+  background-color: var(--color-primary);
+  color: var(--color-tertiary);
+  font-family: inherit;
+  border: none;
+  border-radius: 10rem;
+  padding: 0.25rem 1.2rem;
+  font-weight: 700;
+  font-size: clamp(1rem, 2vw, 1.2rem);
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='%2378290f' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  background-repeat: no-repeat;
+  background-position-x: calc(100% - 10px);
+  background-position-y: 50%;
+  padding-right: 2.5rem;
+}
+
 .list {
   background-color: var(--color-primary);
   color: var(--color-darker);
@@ -110,10 +118,30 @@ body {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  gap: 2rem;
+  gap: 0.5rem;
   align-items: center;
 
+  .actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+
+    span {
+      font-weight: 700;
+    }
+
+    button,
+    select {
+      font-size: clamp(0.8rem, 2vw, 1rem);
+
+      background-color: var(--color-primary);
+      border: 1px solid var(--color-tertiary);
+    }
+  }
+
   ul {
+    flex-grow: 1;
     list-style: none;
     width: 100%;
     max-width: 1200px;
