--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
   --color-secondary: #ff7d00;
   --color-tertiary: #78290f;
   --color-dark: #76c7ad;
+  --color-dark-hover: #8cedce;
   --color-darker: #001524;
 }
 
@@ -87,6 +88,12 @@ body {
     background-color: var(--color-dark);
     color: var(--color-primary);
     padding: 0.25rem 2.2rem;
+
+    &:hover {
+      cursor: pointer;
+      background-color: var(--color-dark-hover);
+      color: var(--color-tertiary);
+    }
   }
 }
 
@@ -131,10 +138,34 @@ select {
       font-weight: 700;
     }
 
-    button,
-    select {
+    button {
+      background-color: var(--color-dark);
+      color: var(--color-primary);
+      border: none;
+      border-radius: 10rem;
+      padding: 0.32rem 1.2rem;
+      font-family: inherit;
+      font-weight: 700;
       font-size: clamp(0.8rem, 2vw, 1rem);
 
+      &:hover {
+        cursor: pointer;
+        background-color: var(--color-dark-hover);
+        color: var(--color-tertiary);
+      }
+
+      &:disabled {
+        background-color: lightgrey;
+        color: var(--color-primary);
+
+        &:hover {
+          cursor: not-allowed;
+        }
+      }
+    }
+
+    select {
+      font-size: clamp(0.8rem, 2vw, 1rem);
       background-color: var(--color-primary);
       border: 1px solid var(--color-tertiary);
     }
