--- a/src/style.css
+++ b/src/style.css
@@ -8,13 +8,25 @@
   --color-dark: #76c7ad;
   --color-dark-hover: #8cedce;
   --color-darker: #001524;
+  --color-danger: #ff3a3a;
 }
 
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
   font-family: "Quicksand", sans-serif;
+}
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
 }
 
 .app {
@@ -22,7 +34,6 @@ body {
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto auto 1fr auto;
-  /* justify-content: center; */
 }
 
 .logo {
@@ -134,6 +145,50 @@ select {
     align-items: center;
     gap: 0.5rem;
 
+    .modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 9999;
+
+      .modal-main {
+        background-color: var(--color-primary);
+        color: var(--color-darker);
+        position: fixed;
+        width: 25vw;
+        height: 25vh;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 16px;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .modal-text {
+          font-size: clamp(0.8rem, 2vw, 1.2rem);
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          flex-grow: 1;
+        }
+
+        .modal-buttons {
+          display: flex;
+          align-items: center;
+          gap: 1rem;
+
+          .close_button {
+            background-color: var(--color-danger);
+          }
+        }
+      }
+    }
+
     span {
       font-weight: 700;
     }
@@ -224,12 +279,12 @@ select {
       }
 
       /* On mouse-over, add a grey background color */
-      .checkbox_container:hover input ~ .checkmark {
+      .checkbox_container:hover input~.checkmark {
         background-color: lightgrey;
       }
 
       /* Add a background color when checked */
-      .checkbox_container input:checked ~ .checkmark {
+      .checkbox_container input:checked~.checkmark {
         background-color: var(--color-primary);
       }
 
@@ -241,7 +296,7 @@ select {
       }
 
       /* Show the checkmark when checked */
-      .checkbox_container input:checked ~ .checkmark:after {
+      .checkbox_container input:checked~.checkmark:after {
         display: block;
       }
 
@@ -258,6 +313,7 @@ select {
         -webkit-transform: rotate(45deg);
         -ms-transform: rotate(45deg);
       }
+
       /* #endregion Checkbox style */
 
       button {
@@ -281,7 +337,7 @@ select {
   font-size: clamp(0.8rem, 2vw, 1rem);
 }
 
-@media (375px < width <= 428px) {
+@media (375px < width <=428px) {
   .app {
     justify-content: center;
   }
@@ -317,9 +373,19 @@ select {
       padding: 0.7rem 1.8rem;
     }
   }
+
+  .list {
+    .actions {
+      .modal {
+        .modal-main {
+          width: 75vw;
+        }
+      }
+    }
+  }
 }
 
-@media (width <= 375px) {
+@media (width <=375px) {
   .logo {
     flex-wrap: nowrap;
     gap: 0.5rem;
@@ -333,6 +399,16 @@ select {
     button,
     select {
       padding: 0.6rem 1.6rem;
+    }
+  }
+
+  .list {
+    .actions {
+      .modal {
+        .modal-main {
+          width: 76vw;
+        }
+      }
     }
   }
 }
